# online-bidding-system-with-blockchain

./: .gitignore  Anchor.toml  Cargo.toml.save  README.md  package-lock.json  package.json
User Management Service/: blockchain-serviceindex.js  notification-serviceindex.js
bidding-frontend/: package-lock.json  package.json
bidding-frontend/src/: App.js
bidding-frontend/src/components/: Profile.css  Profile.js
bidding-frontend/src/components/Auth/: AuthPage.css  AuthPage.js  Login.css  Login.js  Register.css  Register.js
bidding-system-backend/: app.js  config.js  dbConnect.js  package-lock.json  package.json  server.js  testWeb3.js
bidding-system-backend/contracts/: Bidding.sol
bidding-system-backend/controllers/: bidController.js  blockchainController.js  userController.js
bidding-system-backend/models/: bid.js  user.js
bidding-system-backend/routes/: bidRoutes.js  userRoutes.js
bidding-system-backend/services/: blockchainService.js  notificationService.js
bidding-system-frontend/: App.js  AuctionDetails.js  CreateAuction.js  PlaceBid.js  package-lock.json  package.json
gp-be/: api-gatewayindex.js  app.js  bidding-serviceindex.js  bidding-servicemodelsBid.js  package-lock.json  package.json  server.js  user-serviceindex.js
migrations/: deploy-2.js
programs/my-gp-contract/: Cargo.toml
programs/my-gp-contract/src/: lib.rs
tests/: my-gp-contract.js
