[package]
name = "my-gp-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_gp_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor" }
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.18.12"
winnow="=0.4.1"
toml_datetime="=0.6.6"